--- a/package.json
+++ b/package.json
@@ -15,17 +15,24 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.1.2",
+    "@hookform/resolvers": "^3.9.0",
     "@tanstack/react-query": "^5.50.1",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
     "react-helmet-async": "^2.0.5",
-    "react-router-dom": "^6.24.1"
+    "react-hook-form": "^7.52.1",
+    "react-query-auth": "^2.3.0",
+    "react-router-dom": "^6.24.1",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.6",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -44,6 +51,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "sass": "^1.77.7",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1"
+    "vite": "^5.3.1",
+    "vitest": "^2.0.2"
   }
 }
