--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "^5.50.1",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.11",
     "lodash": "^4.17.21",
     "path": "^0.12.7",
     "react": "^18.3.1",
