--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-hook-form": "^7.52.1",
     "react-query-auth": "^2.3.0",
     "react-router-dom": "^6.24.1",
+    "react-table": "^7.8.0",
     "zod": "^3.23.8",
     "zustand": "^4.5.4"
   },
@@ -40,6 +41,7 @@
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-table": "^7.7.20",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
